--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "^5.3.3",
     "js-file-download": "^0.4.12",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
