--- a/chartapp/package.json
+++ b/chartapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-monitoring-dashboard",
+  "name": "chartapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,26 +7,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.96",
-    "@types/react": "^18.3.1",
+    "@types/node": "^16.18.97",
+    "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
-    "axios": "^1.6.8",
-    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
-    "chartjs": "^0.3.24",
     "chartjs-adapter-date-fns": "^3.0.0",
-    "chartjs-plugin-datalabels": "^2.2.0",
-    "date-fns": "^3.6.0",
-    "js-file-download": "^0.4.12",
-    "moment": "^2.30.1",
+    "date-fns": "^2.30.0",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
-    "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
-    "react-select": "^5.8.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -53,8 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-datepicker": "^6.2.0"
   }
 }
