--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^3.6.0",
     "js-file-download": "^0.4.12",
+    "json2csv": "^6.0.0-alpha.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
@@ -55,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/json2csv": "^5.0.7",
     "@types/react-datepicker": "^6.2.0"
   }
 }
