--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-simple-chatbot": "^0.6.1",
+    "react-toastify": "^10.0.5",
+    "styled-components": "^4.4.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -59,6 +62,7 @@
   },
   "devDependencies": {
     "@types/json2csv": "^5.0.7",
-    "@types/react-datepicker": "^6.2.0"
+    "@types/react-datepicker": "^6.2.0",
+    "@types/styled-components": "^5.1.34"
   }
 }
